--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
     </div>
 
     <!-- Scripts -->
-    <script src="js/memories-config.js"></script>
-    <script src="js/firebase-config.js"></script>
-    <script src="js/animations.js"></script>
-    <script src="js/app.js"></script>
+    <script type="module" src="js/memories-config.js"></script>
+    <script type="module" src="js/firebase-config.js"></script>
+    <script type="module" src="js/animations.js"></script>
+    <script type="module" src="js/app.js"></script>
 </body>
 
 </html>
