[IMPROVE]: improve UI and add tracks in images

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
             <div class="train-track">
                 <div class="track-line"></div>
                 <div class="train" id="train">
-                    <div class="train-body">🚂</div>
-                    <div class="train-smoke">💨</div>
+                    <div class="train-carriage">✨</div>
+                    <div class="train-emoji">🚂</div>
                 </div>
             </div>
 
